# huly-coder

./: .dockerignore  .editorconfig  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  clean.ps1  huly-coder.yaml  release-please-config.json  rust-toolchain.toml
.githooks/: commit-msg
.github/workflows/: build.yaml  cd.yml  ci.yml  release.yml
examples/: simple.tape
npm/: main-package.json.tmpl  package.json.tmpl
npm/huly-coder/: .gitignore  package-lock.json  package.json  tsconfig.json
npm/huly-coder/src/: index.ts
src/: config.rs  main.rs
src/agent/: event.rs  mod.rs  utils.rs
src/providers/: anthropic_models.json  mod.rs  model_info.rs  openai_models.json
src/providers/openrouter/: client.rs  completion.rs  mod.rs  streaming.rs
src/templates/: env_details.txt  mod.rs  system_prompt.txt  tool_call_error.txt  tool_usage_error.txt
src/tools/: access_mcp_resource.rs  ask_followup_question.rs  attempt_completion.rs  execute_command.rs  list_code_definition_names.rs  list_files.rs  mod.rs  read_file.rs  replace_in_file.rs  search_files.rs  use_mcp_tool.rs  web_fetch.rs  web_search.rs  write_to_file.rs
src/tools/execute_command/: mod.rs  tools.rs
src/tools/memory/: indexer.rs  mod.rs  tests.rs  tools.json  voyageai_embedding.rs
src/tui/: app.rs  event.rs  mod.rs  ratskin.rs  theme.rs  tool_info.rs  widgets.rs
src/tui/widgets/: filetree.rs  message.rs  mod.rs  shortcuts.rs  task_info.rs  task_status.rs  terminal.rs  toolbar.rs
themes/: dark.yaml  light.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
