[package]
name = "huly-coder"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "refactor/streaming", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
schemars = "0.8.16"
async-stream = "0.3.6"
serde_json = "1.0"
dotenv = "0.15"
thiserror = "1.0"
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
indoc = "2.0.5"
subst = "0.3.7"
walkdir = "2.5.0"
diffy = "0.4.2"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
grep-printer = "0.2.2"
tracing-subscriber = "0.3.18"
futures-util = "0.3.31"
