[package]
name = "huly-coder"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { git = "https://github.com/kosz78/rig.git", branch = "refactor/streaming", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
schemars = "0.8.16"
async-stream = "0.3.6"
serde_json = "1.0"
serde_yaml = "0.9.25"
dotenv = "0.15"
thiserror = "1.0"
tracing = "0.1.40"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
indoc = "2.0.5"
subst = "0.3.7"
walkdir = "2.5.0"
diffy = "0.4.2"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
grep-printer = "0.2.2"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
itertools = "0.14.0"
async-trait = "0.1.88"

# tui
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-textarea = "0.7.0"
tui-tree-widget = "0.23.0"
tui-widget-list = "0.13.2"
textwrap = "0.16.0"
throbber-widgets-tui = "0.8.0"
tui-popup = "0.6.0"
format_num = "0.1.0"