[workspace]
resolver = "2"
members = ["xtask"]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/hcengineering/huly-coder"
repository = "https://github.com/hcengineering/huly-coder"

[package]
name = "huly-coder"
version = "0.3.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hcengineering/huly-coder"
repository = "https://github.com/hcengineering/huly-coder"
authors = ["Konstantin Zaitsev <kos@hardcoreeng.com>"]
description = "A lightweight autonomous AI coding agent with terminal-based UI, inspired by Codex and Cline."
publish = false

[dependencies]
rig-core = { git = "https://github.com/kosz78/rig.git", branch = "mcp", features = [
    "mcp",
] }
mcp-core = { git = "https://github.com/kosz78/mcp-core.git", branch = "main", features = [
    "sse",
] }
# memory related
rig-fastembed = { git = "https://github.com/kosz78/rig.git", branch = "mcp" }
# fix version for rig-fastembed compatibility
fastembed = "4.9.1"
indicium = "0.6.5"

tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
anyhow = "1.0"
schemars = "0.8.16"
async-stream = "0.3.6"
serde_json = "1.0"
serde_yaml = "0.9.25"
thiserror = "1.0"
tracing = "0.1.40"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
indoc = "2.0.5"
subst = "0.3.7"
diffy = "0.4.2"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
grep-printer = "0.2.2"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
itertools = "0.14.0"
async-trait = "0.1.88"
config = "0.15.11"
dirs = "6.0.0"
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
paste = "1.0.15"
heck = "0.5.0"
process-wrap = { version = "8.2.1", features = ["tokio1"] }

# web search and fetch related
percent-encoding = "2.3.1"
htmd = "0.2.1"
headless_chrome = "1.0.17"

# tui
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-textarea = { git = "https://github.com/kosz78/tui-textarea.git", branch = "main" }
tui-tree-widget = "0.23.0"
tui-widget-list = { git = "https://github.com/preiter93/tui-widget-list.git", branch = "main" }
textwrap = "0.16.0"
throbber-widgets-tui = "0.8.0"
tui-popup = "0.6.0"
format_num = "0.1.0"
termimad = "0.31.3"
